# kperf

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  kperf-completion.bash  pyproject.toml  report.css  report.js  run.py  server.py
assets/: index.css  index.html  index.js
debian/: changelog  control  copyright  install  postinst  rules
debian/source/: options
examples/: a.c  b.c  c.c  profiler.cpp  root.c  trace.c
kperf/: draw.py  main.py  proc.py  utils.py
kperf/assets/: index.css  index.html  index.js
kperf/ebpf/: .gitkeep
kperf/server/: config.py  data_transport.py  libbpf.py  main.py  server.py
md-docs/: README.md  dir.yml  dwarf.md  kperf.md  maps.md  proc.md  scan.md  trace.md
python_wrapper/: draw.py
python_wrapper/perf/: perf.py
scripts/: build.sh  clean.sh  control  debug.sh  pack.sh  publish.sh  run.sh  valgrind.sh
src/: a  cgroup.cpp  cgroup.h  common.h  elf.cpp  elf.h  kernel.c  kernel.h  main.c  main.cpp  node.cpp  node.h  parse_symbol.c  parse_symbol.h  perf.c  perf.h  proc_file.cpp  proc_file.h  process.cpp  process.h  profiler.cpp  symbol.cpp  symbol.h  xargparse.cpp  xargparse.h
src/bpf/: main.bpf.c  main.c  vmlinux.h
src/bpf_loader/: bpf_loader.c
src/kperf/: argparse.c  argparse.h  bpf_loader.c  build_html.c  build_html.h  cgroup.c  cgroup.h  config.h  http_server.c  http_server.h  log.c  log.h  main.c  parse_elf.c  parse_elf.h  perf.c  perf.h  symbol.c  symbol.h  tty.h  tui.c  tui.h  utils.c  utils.h  version.h
test/: .gitignore  Makefile
test/base/: cpp.cpp  signal.c  simple.c  (+2 more)
(+14 files in other folders)
