[tool.poetry]
name = "kperf"
version = "0.0.1"
description = "linux kernel profiler"
authors = ["luzhixing12345 <luzhixing12345@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
